--- a/payment.html
+++ b/payment.html
@@ -1,9 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Confirm & Pay — Hamsa Sarees</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Hamsa Sarees — Confirm & Pay</title>
+
+<meta http-equiv="Content-Security-Policy" content="
+  default-src 'self' https: data: blob:;
+  script-src 'self' 'unsafe-inline' https://checkout.razorpay.com https://www.gstatic.com;
+  style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+  font-src https://fonts.gstatic.com data:;
+  frame-src https://checkout.razorpay.com https://api.razorpay.com;
+  connect-src https://api.razorpay.com https://checkout.razorpay.com
+               https://docs.google.com https://firestore.googleapis.com
+               https://identitytoolkit.googleapis.com https://www.gstatic.com;
+  img-src 'self' data: https: http:;
+" />
 
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
@@ -13,10 +25,10 @@ body{
   font-family:Inter,system-ui,Arial,sans-serif;
   background:linear-gradient(180deg,#001f3f,#00306b);
   color:#eaf6ff;
-  min-height:100vh;
   display:flex;
   align-items:center;
   justify-content:center;
+  min-height:100vh
 }
 .card{
   background:linear-gradient(180deg,#071522,#06121a);
@@ -25,6 +37,7 @@ body{
   max-width:420px;
   width:100%;
   box-shadow:0 20px 60px rgba(0,0,0,.45);
+  border:1px solid rgba(255,255,255,0.05)
 }
 h1{margin:0 0 6px;font-size:22px;font-weight:800}
 .small{color:#9fb8d9;font-size:14px;margin-bottom:14px}
@@ -34,13 +47,18 @@ input,textarea{
   width:100%;
   padding:12px;
   border-radius:10px;
-  border:1px solid rgba(255,255,255,.1);
+  border:1px solid rgba(255,255,255,0.08);
   background:#0b1220;
   color:#fff;
-  font-size:14px;
+  font-size:14px
 }
-textarea{resize:none;min-height:90px}
-.price{font-size:20px;font-weight:800;color:#4dd0e1;margin:8px 0 14px}
+textarea{min-height:90px;resize:none}
+.price{
+  font-size:20px;
+  font-weight:800;
+  color:#4dd0e1;
+  margin:8px 0 14px
+}
 button{
   width:100%;
   padding:14px;
@@ -49,16 +67,17 @@ button{
   background:linear-gradient(90deg,#00aaff,#ff5aa3);
   color:#fff;
   font-weight:800;
-  cursor:pointer;
+  font-size:15px;
+  cursor:pointer
 }
-button:disabled{opacity:.6}
+button:disabled{opacity:.6;cursor:not-allowed}
 img{
-  width:100%;
+  max-width:100%;
   max-height:260px;
   object-fit:cover;
   border-radius:12px;
   margin-bottom:12px;
-  display:none;
+  display:none
 }
 </style>
 </head>
@@ -67,14 +86,16 @@ img{
 
 <div class="card">
   <h1>Confirm & Pay</h1>
-  <div class="small">Verify details before payment</div>
+  <div class="small">Please verify all details carefully</div>
 
   <div class="row">
     <label>Product</label>
-    <input id="product" readonly>
+    <input id="product" readonly />
   </div>
 
-  <img id="productImg">
+  <div class="row">
+    <img id="productImg" alt="Product image">
+  </div>
 
   <div class="row">
     <label>Amount</label>
@@ -83,54 +104,36 @@ img{
 
   <div class="row">
     <label>Your Name</label>
-    <input id="name">
+    <input id="name" required />
   </div>
 
   <div class="row">
     <label>Phone</label>
-    <input id="phone">
+    <input id="phone" required />
   </div>
 
   <div class="row">
     <label>Delivery Address</label>
-    <textarea id="address"></textarea>
+    <textarea id="address" required></textarea>
   </div>
 
-  <button id="payBtn">Pay Securely</button>
+  <button id="payBtn" disabled>Pay Securely</button>
 </div>
-
-<!-- GOOGLE FORM (Sheets) -->
-<form id="sheetForm"
-  action="https://docs.google.com/forms/d/e/1FAIpQLSfZUzKWaKECYjFgQWR6/formResponse"
-  method="POST"
-  target="hiddenFrame">
-  <input type="hidden" name="entry.2120009411" id="f_name">
-  <input type="hidden" name="entry.6103303"    id="f_phone">
-  <input type="hidden" name="entry.952475985"  id="f_product">
-  <input type="hidden" name="entry.2008322116" id="f_address">
-  <input type="hidden" name="entry.135044268"  id="f_price">
-</form>
-<iframe name="hiddenFrame" style="display:none"></iframe>
 
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
-<script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-import { getFirestore, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+<script>
+/* ---------- LOAD ORDER FROM INDEX ---------- */
+const raw = sessionStorage.getItem('pendingOrder');
+if (!raw) {
+  alert('Invalid access');
+  location.href = 'index.html';
+}
 
-/* FIREBASE */
-const app = initializeApp({
-  apiKey: "AIzaSy***hidden***",
-  authDomain: "hamsasarees-24738.firebaseapp.com",
-  projectId: "hamsasarees-24738"
-});
-const auth = getAuth(app);
-const db = getFirestore(app);
+let order;
+try { order = JSON.parse(raw); }
+catch { location.href = 'index.html'; }
 
-let currentUser = null;
-
-/* DOM */
 const productEl = document.getElementById('product');
 const priceText = document.getElementById('priceText');
 const nameEl = document.getElementById('name');
@@ -139,79 +142,116 @@ const addressEl = document.getElementById('address');
 const imgEl = document.getElementById('productImg');
 const payBtn = document.getElementById('payBtn');
 
-/* LOAD ORDER */
-const order = JSON.parse(sessionStorage.getItem('pendingOrder') || '{}');
+const price = Number(order.price);
+if (!price || price <= 0) {
+  alert('Invalid price');
+  location.href = 'index.html';
+}
+
 productEl.value = order.product || '';
-priceText.textContent = '₹' + order.price;
+priceText.textContent = `₹${price}`;
 nameEl.value = order.name || '';
 phoneEl.value = order.phone || '';
 addressEl.value = order.address || '';
-if(order.image){
-  imgEl.src = order.image;
-  imgEl.onload = ()=>imgEl.style.display='block';
-}
 
-/* AUTH */
-onAuthStateChanged(auth,u=>{
-  if(!u){ alert('Please sign in'); location.href='index.html'; }
-  else currentUser = u;
+if (order.image) {
+  imgEl.src = order.image;
+  imgEl.onload = () => imgEl.style.display = 'block';
+}
+</script>
+
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+import { getFirestore, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
+
+/* ---------- FIREBASE ---------- */
+const app = initializeApp({
+  apiKey: "AIzaSyBozW19Rjc9nj0YabOIE3DlW0qVHtU5XLA",
+  authDomain: "hamsasarees-24738.firebaseapp.com",
+  projectId: "hamsasarees-24738"
 });
 
-/* RAZORPAY KEY (OBFUSCATED) */
-const razorKey = ['rzp','_live_','Rqulhc8r','ZRz8Iw'].join('');
+const auth = getAuth(app);
+const db = getFirestore(app);
 
-/* PAY */
-payBtn.onclick = ()=>{
-  const name = nameEl.value.trim();
-  const phone = phoneEl.value.replace(/\s+/g,'');
-  const address = addressEl.value.trim();
-
-  if(!name || !/^[6-9]\d{9}$/.test(phone) || address.length < 10){
-    alert('Invalid details');
+/* ---------- AUTH + PAY ---------- */
+onAuthStateChanged(auth, user => {
+  if (!user) {
+    alert('Please sign in first');
+    location.href = 'index.html';
     return;
   }
 
-  payBtn.disabled = true;
+  payBtn.disabled = false;
 
-  const rzp = new Razorpay({
-    key: razorKey,
-    amount: order.price * 100,
-    currency: 'INR',
-    name: 'Hamsa Sarees',
-    description: order.product,
+  payBtn.onclick = () => {
+    const name = nameEl.value.trim();
+    const phone = phoneEl.value.replace(/\s+/g,'');
+    const address = addressEl.value.trim();
 
-    handler: async res => {
-      // 1️⃣ FIRESTORE
-      await setDoc(
-        doc(db,'users',currentUser.uid,'orders',crypto.randomUUID()),
-        {
-          product: order.product,
-          price: order.price,
-          image: order.image || '',
-          name, phone, address,
-          email: currentUser.email,
-          paymentId: res.razorpay_payment_id,
-          status: 'PAID',
-          createdAt: serverTimestamp()
-        }
-      );
-
-      // 2️⃣ GOOGLE SHEETS
-      f_name.value = name;
-      f_phone.value = phone;
-      f_product.value = order.product;
-      f_address.value = address;
-      f_price.value = order.price;
-      sheetForm.submit();
-
-      sessionStorage.removeItem('pendingOrder');
-      alert('Payment successful!');
-      location.href='yourorders.html';
+    if (!name || !/^[6-9]\d{9}$/.test(phone) || address.length < 10) {
+      alert('Enter valid name, phone and full address');
+      return;
     }
-  });
 
-  rzp.open();
-};
+    payBtn.disabled = true;
+    payBtn.textContent = 'Processing...';
+
+    const rzp = new Razorpay({
+      key: 'rzp_live_Rqulhc8rZRz8Iw',
+      amount: Math.round(price * 100),
+      currency: 'INR',
+      name: 'Hamsa Sarees',
+      description: order.product,
+
+      handler: async res => {
+        /* -------- FIRESTORE -------- */
+        await setDoc(
+          doc(db, 'users', user.uid, 'orders', crypto.randomUUID()),
+          {
+            product: order.product,
+            price,
+            name,
+            phone,
+            address,
+            image: order.image || '',
+            email: user.email,
+            paymentId: res.razorpay_payment_id,
+            status: 'PAID',
+            createdAt: serverTimestamp()
+          }
+        );
+
+        /* -------- GOOGLE FORM (MAIN ENTRY) -------- */
+        const fd = new FormData();
+        fd.append('entry.2120009411', name);
+        fd.append('entry.6103303', phone);
+        fd.append('entry.952475985', order.product);
+        fd.append('entry.2008322116', address);
+        fd.append('entry.135044268', price);
+
+        fetch('https://docs.google.com/forms/d/e/1FAIpQLSfREKvTld9R59UADJQK6jxQIbM64tt1iP0M-XiPq4ykOOwe5w/formResponse', {
+          method: 'POST',
+          body: fd,
+          mode: 'no-cors'
+        });
+
+        sessionStorage.removeItem('pendingOrder');
+        alert('Payment successful!');
+        location.href = 'yourorders.html';
+      }
+    });
+
+    rzp.on('payment.failed', () => {
+      alert('Payment failed');
+      payBtn.disabled = false;
+      payBtn.textContent = 'Pay Securely';
+    });
+
+    rzp.open();
+  };
+});
 </script>
 
 </body>
