--- a/payment.html
+++ b/payment.html
@@ -96,18 +96,19 @@ h1{margin:0 0 6px;font-size:24px;font-weight:800}
 label{display:block;font-size:13px;color:var(--text-muted);margin-bottom:6px;font-weight:600;}
 input,textarea{
   width:100%;
-  background:#0f1738;
-  border:1px solid var(--border);
+  background: rgba(255, 255, 255, 0.03);
+  border:1px solid rgba(255,255,255,0.1);
   border-radius:12px;
   padding:10px;
   color:var(--text-main);
   font-size:14px;
-  transition: all 0.2s ease;
+  transition: all 0.3s ease;
 }
 input:focus, textarea:focus {
   border-color: var(--gold);
   outline: none;
-  box-shadow: 0 0 0 2px var(--bg-main), 0 0 0 4px rgba(230,181,102,0.4);
+  background: rgba(255, 255, 255, 0.05);
+  box-shadow: 0 0 0 2px var(--bg-main), 0 0 0 4px rgba(230,181,102,0.3);
   transition: box-shadow 0.2s ease, border-color 0.2s ease;
 }
 input.invalid, textarea.invalid {
@@ -136,8 +137,8 @@ button{
   border-radius:14px;
   font-weight:800;
   cursor:pointer;
-  box-shadow:0 10px 30px rgba(230,181,102,.35);
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  box-shadow:0 4px 15px rgba(230,181,102,0.3);
+  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   position: relative;
   overflow: hidden;
 }
@@ -150,6 +151,7 @@ button::after {
 }
 button:hover::after {
   left: 100%;
+  transition: 0.6s ease-in-out;
 }
 button:active {
   transform: scale(0.96);
@@ -161,6 +163,10 @@ button:disabled{
   box-shadow: none;
   transform: none !important;
 }
+button:not(:disabled) {
+  animation: pulse-gold 2s infinite;
+}
+@keyframes pulse-gold { 0% { box-shadow: 0 0 0 0 rgba(230, 181, 102, 0.7); } 70% { box-shadow: 0 0 0 10px rgba(230, 181, 102, 0); } 100% { box-shadow: 0 0 0 0 rgba(230, 181, 102, 0); } }
 #productImg{
   max-width:100%;
   max-height:260px;
