--- a/yourorders.html
+++ b/yourorders.html
@@ -59,7 +59,8 @@ header{
   header{flex-direction:column; gap: 16px;}
 }
 .brand{ display:flex; gap:14px; align-items:center; }
-.logo{ width:52px; height:52px; border-radius:14px; overflow:hidden; border: 1px solid rgba(255,255,255,0.1); box-shadow: 0 4px 10px rgba(0,0,0,0.2); flex-shrink: 0; }
+.logo{ width:52px; height:52px; border-radius:14px; overflow:hidden; border: 1px solid rgba(255,255,255,0.1); box-shadow: 0 4px 10px rgba(0,0,0,0.2); flex-shrink: 0; transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease; }
+.logo:hover { transform: scale(1.05); box-shadow: 0 8px 20px rgba(230, 181, 102, 0.2); border-color: var(--gold); }
 .logo img { width: 100%; height: 100%; object-fit: cover; }
 .title{ font-weight:800; font-size:18px; letter-spacing: -0.01em; line-height: 1.2; }
 .small{ font-size:13px; color:var(--text-muted); }
@@ -73,9 +74,9 @@ header{
   border-radius:14px;
   font-weight:800;
   cursor:pointer;
-  box-shadow:0 10px 30px rgba(230,181,102,.35);
+  box-shadow:0 4px 15px rgba(230,181,102,0.3);
   text-decoration: none;
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn:active {
   transform: scale(0.96);
@@ -106,12 +107,13 @@ header{
   gap: 20px;
   align-items: center;
   animation: fadeIn 0.5s cubic-bezier(0.25, 0.8, 0.25, 1) backwards;
-  transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease;
+  transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease, background 0.3s ease;
 }
 .order-card:hover {
-  transform: translateY(-4px);
-  box-shadow: 0 15px 30px rgba(0,0,0,0.25);
-  border-color: rgba(230, 181, 102, 0.4);
+  transform: translateY(-5px);
+  box-shadow: 0 15px 40px rgba(0,0,0,0.3);
+  border-color: rgba(230, 181, 102, 0.5);
+  background: rgba(255, 255, 255, 0.04);
 }
 .order-card img { border-radius: 10px; width: 80px; height: 100px; object-fit: cover; }
 .order-info strong{display:block;font-size:16px;margin-bottom:6px}
