--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"> 
+<html lang="en">
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -1552,7 +1552,7 @@ let currentReviewsUnsub = null;
     const fsMod = await import('https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js');
 
     const { getAuth, GoogleAuthProvider, signInWithPopup, signInWithRedirect, getRedirectResult, signOut, onAuthStateChanged } = authMod;
-    const { getFirestore, collection, addDoc, setDoc, doc, getDoc, deleteDoc, serverTimestamp, getDocs, onSnapshot, updateDoc } = fsMod;
+    const { getFirestore, collection, addDoc, setDoc, doc, getDoc, deleteDoc, serverTimestamp, getDocs, onSnapshot, updateDoc, query, where } = fsMod;
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
@@ -1592,6 +1592,8 @@ let currentReviewsUnsub = null;
       const div = document.createElement('div');
       div.className = 'review-item';
 
+      const verifiedBadge = r.verified ? `<span style="color:var(--success);font-size:11px;margin-left:6px;display:inline-flex;align-items:center;gap:3px;background:rgba(61, 220, 151, 0.1);padding:2px 6px;border-radius:4px;border:1px solid rgba(61, 220, 151, 0.2);" title="Verified Purchase"><svg width="10" height="10" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"><polyline points="20 6 9 17 4 12"></polyline></svg> Verified Purchase</span>` : '';
+
       const stars = '★'.repeat(r.rating || 0);
 const date = r.createdAt?.toDate
   ? r.createdAt.toDate().toLocaleDateString('en-IN', {
@@ -1603,7 +1605,7 @@ const date = r.createdAt?.toDate
 
 div.innerHTML = `
   <div style="display:flex;justify-content:space-between;align-items:center">
-    <strong>${escapeHtml(r.userName || 'User')}</strong>
+    <div><strong>${escapeHtml(r.userName || 'User')}</strong>${verifiedBadge}</div>
     <span style="font-size:12px;color:var(--muted)">${date}</span>
   </div>
   <div class="stars">${stars}</div>
@@ -1615,6 +1617,9 @@ div.innerHTML = `
     });
 
     pdRating.innerText = `★ ${(sum/count).toFixed(1)} (${count} reviews)`;
+  }, err => {
+    console.warn('Reviews snapshot error:', err);
+    pdRating.innerText = 'Ratings unavailable';
   });
 }
 
@@ -1669,12 +1674,22 @@ $('submitReview')?.addEventListener('click', async () => {
   }
 
   try {
+    // Check for Verified Purchase
+    let isVerified = false;
+    try {
+      const ordersRef = collection(db, 'users', auth.currentUser.uid, 'orders');
+      const q = query(ordersRef, where('pid', '==', currentProductId));
+      const orderSnap = await getDocs(q);
+      if (!orderSnap.empty) isVerified = true;
+    } catch (e) { console.warn('Verification check failed', e); }
+
     await setDoc(
   doc(db, 'products', currentProductId, 'reviews', auth.currentUser.uid),
   {
     rating: selectedRating,
     text: $('reviewText').value.trim(),
     userName: auth.currentUser.displayName || 'Anonymous',
+    verified: isVerified,
     createdAt: serverTimestamp()
   }
 );
@@ -1687,7 +1702,12 @@ $('submitReview')?.addEventListener('click', async () => {
     const avg = count > 0 ? sum / count : 0;
 
     // Update Product Document with new stats
-    await setDoc(doc(db, 'products', currentProductId), { _avg: avg, _count: count }, { merge: true });
+    try {
+      await setDoc(doc(db, 'products', currentProductId), { _avg: avg, _count: count }, { merge: true });
+    } catch (e) {
+      // Ignore permission error for non-admins; review is still saved
+      console.warn('Skipping product stat update (admin only)');
+    }
 
     toast('Review submitted');
     $('reviewText').value = '';
@@ -3446,7 +3466,7 @@ productGrid.addEventListener('click', ev=>{
   <!-- Mobile Sticky CTA (Hidden by default) -->
   <div id="mobileStickyCta" class="mobile-sticky-cta"></div>
 
-  <a href="https://wa.me/9994051579" target="_blank" class="whatsapp-float" aria-label="Chat on WhatsApp">
+  <a href="https://wa.me/919994051579" target="_blank" class="whatsapp-float" aria-label="Chat on WhatsApp">
     <svg width="28" height="28" viewBox="0 0 24 24" fill="currentColor"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
   </a>
 
@@ -3456,9 +3476,8 @@ productGrid.addEventListener('click', ev=>{
         <h4>Hamsa Sarees</h4>
         <p class="small" style="line-height:1.6; margin-bottom:20px;">Quality and tradition in every thread.</p>
         <div class="social-icons">
-          <a href="#" class="social-icon" aria-label="Instagram"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg></a>
-          <a href="#" class="social-icon" aria-label="Facebook"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg></a>
-          <a href="#" class="social-icon" aria-label="WhatsApp"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg></a>
+          <a href="https://www.youtube.com/@hamsasarees" target="_blank" class="social-icon" aria-label="YouTube"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z"></path><polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon></svg></a>
+          <a href="https://wa.me/919994051579" target="_blank" class="social-icon" aria-label="WhatsApp"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg></a>
         </div>
       </div>
       <div class="footer-col">
