--- a/index.html
+++ b/index.html
@@ -1820,7 +1820,7 @@ pdOrderBtn?.addEventListener('click', () => {
         try {
           await setDoc(ref, {
             title: product.title,
-            price: Number(product.price),
+            price: Number(String(product.price).replace(/[^\d.]/g, '')),
             image: (product.images && product.images[0]) || product.img || '',
             addedAt: serverTimestamp()
           });
@@ -1852,30 +1852,40 @@ pdOrderBtn?.addEventListener('click', () => {
         return;
       }
 
-      let html = '<div class="wishlist-grid">';
+      container.innerHTML = '';
+      const grid = document.createElement('div');
+      grid.className = 'wishlist-grid';
+
       wishlistMap.forEach((item, id) => {
-        html += `
-          <div class="wishlist-item">
-            <img src="${item.image || ''}" onclick="openProductDetail('${id}')" style="cursor:pointer">
+        const div = document.createElement('div');
+        div.className = 'wishlist-item';
+        div.innerHTML = `
+            <img src="${item.image || ''}" style="cursor:pointer">
             <div style="font-weight:700; font-size:13px; margin-bottom:4px; white-space:nowrap; overflow:hidden; text-overflow:ellipsis;">${escapeHtml(item.title)}</div>
             <div style="color:var(--gold); font-weight:600; font-size:13px;">₹${item.price}</div>
-            <button class="btn-ghost small remove-wish" data-id="${id}" style="width:100%; margin-top:8px; padding:6px; color:var(--danger); border-color:var(--border);">Remove</button>
-          </div>
         `;
-      });
-      html += '</div>';
-      container.innerHTML = html;
-
-      // Attach remove listeners
-      container.querySelectorAll('.remove-wish').forEach(btn => {
-        btn.addEventListener('click', async (e) => {
-          const id = e.target.dataset.id;
-          if(auth.currentUser && id) {
-            await deleteDoc(doc(db, 'users', auth.currentUser.uid, 'wishlist', id));
-            toast('Removed');
-          }
+        
+        // Image click
+        div.querySelector('img').addEventListener('click', () => {
+            closeModal(wishlistModal);
+            openProductDetail(id);
         });
+
+        // Remove Button
+        const btn = document.createElement('button');
+        btn.className = 'btn-ghost small remove-wish';
+        btn.style.cssText = 'width:100%; margin-top:8px; padding:6px; color:var(--danger); border-color:var(--border);';
+        btn.textContent = 'Remove';
+        btn.addEventListener('click', async () => {
+            if(auth.currentUser && id) {
+                await deleteDoc(doc(db, 'users', auth.currentUser.uid, 'wishlist', id));
+                toast('Removed');
+            }
+        });
+        div.appendChild(btn);
+        grid.appendChild(div);
       });
+      container.appendChild(grid);
     }
 
     $('wishlistBtn')?.addEventListener('click', () => {
@@ -2506,7 +2516,7 @@ productGrid.addEventListener('click', e => {
       
       wishBtn.addEventListener('click', (e) => { 
         e.stopPropagation(); 
-        toggleWishlist({ id: id, ...data });
+        toggleWishlist({ ...data, id: id });
       });
       orderWrap.appendChild(wishBtn);
 
